Fix overflow issues.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,7 @@ li {
 
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 html {
